--- a/.github/workflows/github-demo2.yml
+++ b/.github/workflows/github-demo2.yml
@@ -23,8 +23,9 @@ jobs:
       - name: Checkout PyTorch
         uses: actions/checkout@master
       - name: Install flake8
-        run: pip install flake8
-        run: echo ${GITHUB_TOKEN}
+        run: |
+          pip install flake8
+          echo ${GITHUB_TOKEN}
       - name: Run flake8
         uses: suo/flake8-github-action@releases/v1
         with:
