--- a/.github/workflows/github-demo2.yml
+++ b/.github/workflows/github-demo2.yml
@@ -6,6 +6,9 @@ on:
       - master
   workflow_dispatch:
 
+env:
+  DAY_OF_WEEK: Monday
+
 jobs:
   numpy-test:
     runs-on: ubuntu-latest
@@ -25,7 +28,7 @@ jobs:
       - name: Install flake8
         run: |
           pip install flake8
-          echo ${GITHUB_TOKEN}
+          echo ${DAY_OF_WEEK}
       - name: Run flake8
         uses: suo/flake8-github-action@releases/v1
         with:
