--- a/.github/workflows/github-demo2.yml
+++ b/.github/workflows/github-demo2.yml
@@ -29,9 +29,18 @@ jobs:
         run: |
           pip install flake8
           echo ${DAY_OF_WEEK}
+          flake8 ./
       - name: Run flake8
         uses: suo/flake8-github-action@releases/v1
         with:
           checkName: 'flake8_py3'   # NOTE: this needs to be the same as the job name
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  pytest:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Setup Python
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.8.12
+          architecture: x64
