--- a/.github/workflows/github-demo2.yml
+++ b/.github/workflows/github-demo2.yml
@@ -29,7 +29,7 @@ jobs:
         run: |
           pip install flake8
           echo ${DAY_OF_WEEK}
-          flake8 ./
+          # flake8 ./
       - name: Run flake8
         uses: suo/flake8-github-action@releases/v1
         with:
@@ -44,3 +44,12 @@ jobs:
         with:
           python-version: 3.8.12
           architecture: x64
+      - name: Install pytest
+        run: |
+          pip install pytest
+      - name: Run pytest
+        run: |
+          cd ./test
+          pytest test_app.py
+
+      
