--- a/.github/workflows/github-demo2.yml
+++ b/.github/workflows/github-demo2.yml
@@ -49,7 +49,10 @@ jobs:
           pip install pytest
       - name: Run pytest
         run: |
-          cd ./test
-          pytest test_app.py
+          #cd ./test
+          #pytest test_app.py
+          pwd
+          ls 
+          ls /
 
       
