--- a/.github/workflows/github-demo2.yml
+++ b/.github/workflows/github-demo2.yml
@@ -48,10 +48,6 @@ jobs:
         run: |
           pip install pytest
       - name: Run pytest
-        run: |
-          #cd ./test
-          #pytest test_app.py
-          pwd
-          ls ../
+        run: pytest
 
       
