--- a/.github/workflows/github-demo2.yml
+++ b/.github/workflows/github-demo2.yml
@@ -39,6 +39,8 @@ jobs:
   pytest:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
       - name: Setup Python
         uses: actions/setup-python@v1
         with:
@@ -47,6 +49,7 @@ jobs:
       - name: Install pytest
         run: |
           pip install pytest
+          ls
       - name: Run pytest
         run: pytest
 
