--- a/.github/workflows/github-demo2.yml
+++ b/.github/workflows/github-demo2.yml
@@ -50,7 +50,9 @@ jobs:
           pip install pytest pytest-cov
           ls
       - name: Run pytest with coverage
-        run: pytest --cov
+        run: |
+          pytest --cov
+          coverage report
   Build:
     needs: UnitTest
     runs-on: ubuntu-latest
