--- a/.github/workflows/github-demo2.yml
+++ b/.github/workflows/github-demo2.yml
@@ -80,6 +80,7 @@ jobs:
       - name: execute download file
         run: |
           ls -l ./hello
+          echo github.event.head_commit.message
           # chmod 777 ./hello
           # ./hello
 
