--- a/.github/workflows/github-demo3.yml
+++ b/.github/workflows/github-demo3.yml
@@ -13,6 +13,7 @@ env:
   DAY_OF_WEEK: Monday
 
 jobs:
+  """
   Lint:
     runs-on: ubuntu-latest
     steps:
@@ -28,14 +29,14 @@ jobs:
           pip install flake8
           echo ${DAY_OF_WEEK}
           # flake8 ./
-      - name: Run flake8
-        uses: suo/flake8-github-action@releases/v1
-        with:
-          checkName: 'Lint'   # NOTE: this needs to be the same as the job name
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #- name: Run flake8
+      #  uses: suo/flake8-github-action@releases/v1
+      #  with:
+      #    checkName: 'Lint'   # NOTE: this needs to be the same as the job name
+      #  env:
+      #    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  """
   UnitTest:
-    needs: Lint
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
