--- a/.github/workflows/github-demo3.yml
+++ b/.github/workflows/github-demo3.yml
@@ -52,7 +52,7 @@ jobs:
       
       - name: check diff file name
         run: |
-          echo ${steps.changed-files.outputs.all_modified_files}
+          echo ${{ steps.changed-files.outputs.all_modified_files }}
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
