--- a/.github/workflows/github-demo3.yml
+++ b/.github/workflows/github-demo3.yml
@@ -33,9 +33,38 @@ jobs:
           checkName: 'Lint'   # NOTE: this needs to be the same as the job name
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  
+  Internal_Test:
+    needs: Lint
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 2
+
+      - name: create MongoDB docker
+        run: |
+          cd InternalTest
+          docker-compose build
+          docker-compose up -d
+
+      - name: Setup Python
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.8.2
+          architecture: x64
+      - name: Install pytest
+        run: |
+          pip install pytest pytest-cov
+          pip install pymongo
+      
+      - name Run test
+        run: |
+          pytest test_internal.py -v --cov=../CPSSVOperationTimeService --cov-report=term-missing
 
   Deploy:
-    needs: Lint
+    needs: Internal_Test
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
