--- a/.github/workflows/github-demo3.yml
+++ b/.github/workflows/github-demo3.yml
@@ -16,16 +16,19 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v1
         with:
-          python-version: 3.8.12
+          python-version: 3.7.13
           architecture: x64
-      - name: Checkout PyTorch
-        uses: actions/checkout@master
+
+      - name: Checkout
+        uses: actions/checkout@v2
+
       - name: Install flake8
         continue-on-error: true
         run: |
           pip install flake8
           echo ${DAY_OF_WEEK}
           # flake8 ./
+
       - name: Run flake8
         continue-on-error: true
         uses: suo/flake8-github-action@releases/v1
@@ -33,7 +36,7 @@ jobs:
           checkName: 'Lint'   # NOTE: this needs to be the same as the job name
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  
+
   Internal_Test:
     needs: Lint
     runs-on: ubuntu-latest
@@ -43,7 +46,7 @@ jobs:
         with:
           fetch-depth: 2
 
-      - name: create MongoDB docker
+      - name: Setup MongoDB docker
         run: |
           cd InternalTest
           docker-compose build
@@ -54,18 +57,18 @@ jobs:
         with:
           python-version: 3.7.13
           architecture: x64
-      - name: Install pytest
+
+      - name: Install python lib
         run: |
           pip install pytest pytest-cov
           pip install pymongo
-      
-      - name: Run test
+
+      - name: Run internal test
         run: |
-          ls
           cd InternalTest
           pytest test_internal.py -v --cov=../CPSSVOperationTimeService --cov-report=term-missing
 
-  Deploy:
+  External_Test:
     needs: Internal_Test
     runs-on: ubuntu-latest
     steps:
@@ -73,14 +76,38 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 2
-
-      - name: Checkout the target branch
-        env:
-          BRANCH: "${GITHUB_REF#refs/heads/}"
-        run: |
-          git status 
-          echo ${{ env.BRANCH }}
       
+      - name: archive files
+        run: |
+          mkdir ./archives
+          ls
+          cd ./CPSSVOperationTimeService
+          zip -rq ../archives/CPSSVOperationTimeService.zip ./*
+      
+      - name: upload files for S3
+        run: |
+          ls
+          aws s3 cp ./archives/CPSSVOperationTimeService.zip  s3://dev-nakano-testdata/
+        
+      - name: set files to lambda
+        run: |
+          aws lambda update-function-code --function-name CPSSVOperationTimeService_nakano --s3-bucket dev-nakano-testdata  --s3-key CPSSVOperationTimeService.zip --publish
+      
+      -name: Run external test
+        continue-on-error: true
+        run: |
+          cd ExternalTest
+          pytest
+
+  Deploy:
+    needs: External_Test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 2
+
       - name: Get changed files
         id: changed-files
         uses: tj-actions/changed-files@v10.1
@@ -108,9 +135,6 @@ jobs:
           ls
           aws s3 cp ./archives/CPSSVOperationTimeService.zip  s3://dev-nakano-testdata/
 
-      - name: set files for lambda
+      - name: set files to lambda
         run: |
           aws lambda update-function-code --function-name CPSSVOperationTimeService_nakano --s3-bucket dev-nakano-testdata  --s3-key CPSSVOperationTimeService.zip --publish
-
-
-      
