--- a/.github/workflows/github-demo3.yml
+++ b/.github/workflows/github-demo3.yml
@@ -76,7 +76,14 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 2
-      
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-northeast-1
+
       - name: archive files
         run: |
           mkdir ./archives
@@ -93,6 +100,16 @@ jobs:
         run: |
           aws lambda update-function-code --function-name CPSSVOperationTimeService_nakano --s3-bucket dev-nakano-testdata  --s3-key CPSSVOperationTimeService.zip --publish
       
+      - name: Setup Python
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.7.13
+          architecture: x64
+
+      - name: Install python lib
+        run: |
+          pip install pytest
+
       - name: Run external test
         continue-on-error: true
         run: |
