--- a/.github/workflows/github-demo3.yml
+++ b/.github/workflows/github-demo3.yml
@@ -108,7 +108,7 @@ jobs:
 
       - name: Install python lib
         run: |
-          pip install pytest
+          pip install pytest requests
 
       - name: Run external test
         continue-on-error: true
